
SUBDIRS = libjit coff/src common/src core/src decode/src jit/src profiler/src
bin_PROGRAMS = yac6xsim
yac6xsim_LDADD = ./common/src/libcommon.a ./core/src/libcore.a ./decode/src/libdecode.a ./jit/src/libjit.a ./profiler/src/libprofiler.a ./common/src/libcommon.a ./coff/src/libcoff.a
yac6xsim_SOURCES = yac6xsim.cpp
